<resources>
    <string name="app_name">AppEmpresaABC</string>
    <string name="user">User:</string>
    <string name="password">Password:</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="instagram">Instagram</string>
    <string name="twitter">Twitter</string>
    <string name="facebook">Facebook</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="youtube">Youtube</string>
    <string name="android">Android</string>
</resources>
